--- a/sign.css
+++ b/sign.css
@@ -85,7 +85,9 @@ main h2 {
 }
 
 form input[type="email"],
-form input[type="password"] {
+form input[type="password"],
+form input[type="text"],
+form input[type="tel"] {
   width: 90%;
   padding: 12px;
   margin: 10px 0;
@@ -198,7 +200,6 @@ footer h2 {
   transform: translateX(2px);
 }
 
-
 .footer-column span {
   display: block;
   margin-top: 10px;
@@ -245,10 +246,4 @@ footer h2 {
   .footer-column {
     flex: 1 1 100%;
   }
-}
-#demo1, #demo2 {
-  font-size: 14px;
-  margin-top: 5px;
-  color: red;
-  font-weight: 500;
 }
